{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 18,
  "lineage": "6712b367-cb64-ca5c-9c28-cb10234f52af",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914347776203:internet-gateway/igw-04e938a61de413b67",
            "id": "igw-04e938a61de413b67",
            "owner_id": "914347776203",
            "tags": {
              "Name": "terra-igw"
            },
            "tags_all": {
              "Name": "terra-igw"
            },
            "vpc_id": "vpc-06abb363f29a6b961"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alb-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "terra-network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914347776203:network-acl/acl-0107feb2291da1e03",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0107feb2291da1e03",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "914347776203",
            "subnet_ids": [
              "subnet-0d7633424861f2969",
              "subnet-0de29de88f526c18a"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-06abb363f29a6b961"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.terra-public-subnet-1",
            "aws_subnet.terra-public-subnet-2",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914347776203:route-table/rtb-0aa37205044c012b4",
            "id": "rtb-0aa37205044c012b4",
            "owner_id": "914347776203",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e938a61de413b67",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-public"
            },
            "tags_all": {
              "Name": "terra-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06abb363f29a6b961"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027f395482b201275",
            "route_table_id": "rtb-0aa37205044c012b4",
            "subnet_id": "subnet-0de29de88f526c18a"
          },
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_route_table.terra-public",
            "aws_subnet.terra-public-subnet-1",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0895d747d9b4ca205",
            "route_table_id": "rtb-0aa37205044c012b4",
            "subnet_id": "subnet-0d7633424861f2969"
          },
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_route_table.terra-public",
            "aws_subnet.terra-public-subnet-2",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914347776203:security-group/sg-069efbe784b800885",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-069efbe784b800885",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "914347776203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "load-balancer-security-group"
            },
            "tags_all": {
              "Name": "load-balancer-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06abb363f29a6b961"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914347776203:security-group/sg-05807516efbffa8a7",
            "description": "Allow  TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05807516efbffa8a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069efbe784b800885"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069efbe784b800885"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security-group",
            "name_prefix": "",
            "owner_id": "914347776203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group"
            },
            "tags_all": {
              "Name": "security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06abb363f29a6b961"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914347776203:subnet/subnet-0de29de88f526c18a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de29de88f526c18a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "914347776203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-public-subnet-1"
            },
            "tags_all": {
              "Name": "terra-public-subnet-1"
            },
            "vpc_id": "vpc-06abb363f29a6b961"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914347776203:subnet/subnet-0d7633424861f2969",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7633424861f2969",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "914347776203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-public-subnet-2"
            },
            "tags_all": {
              "Name": "terra-public-subnet-2"
            },
            "vpc_id": "vpc-06abb363f29a6b961"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914347776203:vpc/vpc-06abb363f29a6b961",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dc5d63b0d1945399",
            "default_route_table_id": "rtb-0d238197445efbeb0",
            "default_security_group_id": "sg-0b2862bafd9ae0ec4",
            "dhcp_options_id": "dopt-008725bc918583b51",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06abb363f29a6b961",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d238197445efbeb0",
            "owner_id": "914347776203",
            "tags": {
              "Name": "custom_vpc"
            },
            "tags_all": {
              "Name": "custom_vpc"
            }
          }
        }
      ]
    }
  ]
}